// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<div>
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="radio-preview:description:1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="radio-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Inline 1`] = `
<fieldset>
  <legend data-weight="medium">
    Kontaktes på e-post?
  </legend>
  <p data-variant="default">
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-6);">
    <div>
      <input
        id="undefined-inline-ja"
        type="radio"
        value="ja"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-ja"
      >
        Ja
      </label>
    </div>
    <div>
      <input
        id="undefined-inline-nei"
        type="radio"
        value="nei"
        name="my-inline"
      >
      <label
        data-weight="regular"
        for="undefined-inline-nei"
      >
        Nei
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<div>
  <input
    id="radio-preview"
    type="radio"
    value="value"
    aria-describedby="radio-preview:description:1"
  >
  <label
    data-weight="regular"
    for="radio-preview"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="radio-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      id="radio-in-color-context"
      type="radio"
      checked
      aria-describedby="radio-in-color-context:description:1"
    >
    <label
      data-weight="regular"
      for="radio-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="radio-in-color-context:description:1"
    >
      Description
    </div>
  </div>
</div>
`;
